SERVER-17882 Expand failIndexKeyTooLong handling to updates