src/mongo/db/index/index_access_method.cpp
@@ -317,6 +317,11 @@ namespace mongo {
                                                   ticket.loc,
                                                   ticket.dupsAllowed);
             if ( !status.isOK() ) {
+                if (status.code() == ErrorCodes::KeyTooLong && ignoreKeyTooLong(txn)) {
+                    // Ignore.
+                    continue;
+                }
+
                 return status;
             }
         }
